fixed layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ p {
 }
 
 .centered {
+	padding-left: 20px;
+	padding-right: 20px;
     text-align: center;
 }
 
